
lib_LTLIBRARIES = \
	libartc42.la \
	libcomper.la \
	libenigma.la \
	libkosinski.la \
	libkosplus.la \
	libnemesis.la \
	librocket.la \
	libsaxman.la

libartc42_la_SOURCES =  \
	ignore_unused_variable_warning.hh \
	artc42.cc \
	artc42.hh

libartc42_la_LIBADD =

libcomper_la_SOURCES = \
	bigendian_io.hh \
	bitstream.hh \
	ignore_unused_variable_warning.hh \
	basic_decoder.hh \
	moduled_adaptor.hh \
	lzss.hh \
	comper.cc \
	comper.hh

libcomper_la_LIBADD =

libenigma_la_SOURCES = \
	bigendian_io.hh\
	bitstream.hh \
	basic_decoder.hh \
	moduled_adaptor.hh \
	enigma.cc \
	enigma.hh

libenigma_la_LIBADD =

libkosinski_la_SOURCES = \
	bigendian_io.hh \
	bitstream.hh \
	ignore_unused_variable_warning.hh \
	basic_decoder.hh \
	moduled_adaptor.hh \
	lzss.hh \
	kosinski.cc \
	kosinski.hh

libkosinski_la_LIBADD =

libkosplus_la_SOURCES = \
	bigendian_io.hh \
	bitstream.hh \
	ignore_unused_variable_warning.hh \
	basic_decoder.hh \
	moduled_adaptor.hh \
	lzss.hh \
	kosplus.cc \
	kosplus.hh

libkosplus_la_LIBADD = 

libnemesis_la_SOURCES = \
	bigendian_io.hh \
	bitstream.hh \
	ignore_unused_variable_warning.hh \
	basic_decoder.hh \
	moduled_adaptor.hh \
	nemesis.cc \
	nemesis.hh

libnemesis_la_LIBADD =

librocket_la_SOURCES = \
	bigendian_io.hh \
	bitstream.hh \
	ignore_unused_variable_warning.hh \
	basic_decoder.hh \
	moduled_adaptor.hh \
	lzss.hh \
	rocket.cc \
	rocket.hh

librocket_la_LIBADD =

libsaxman_la_SOURCES = \
	bigendian_io.hh \
	bitstream.hh \
	ignore_unused_variable_warning.hh \
	basic_decoder.hh \
	moduled_adaptor.hh \
	lzss.hh \
	saxman.cc \
	saxman.hh

libsaxman_la_LIBADD =

AM_CPPFLAGS =

