
bin_PROGRAMS = \
	compcmp \
	enicmp \
	koscmp \
	kosplus \
	nemcmp \
	rockcmp \
	saxcmp

compcmp_SOURCES = compcmp.cc

compcmp_CXXFLAGS = -I$(srcdir)/../lib

compcmp_LDFLAGS = $(builddir)/../lib/libcomper.la

enicmp_SOURCES = enicmp.cc

enicmp_CXXFLAGS = -I$(srcdir)/../lib

enicmp_LDFLAGS = $(builddir)/../lib/libenigma.la

nemcmp_SOURCES = nemcmp.cc

nemcmp_CXXFLAGS = -I$(srcdir)/../lib

nemcmp_LDFLAGS = $(builddir)/../lib/libnemesis.la

koscmp_SOURCES = koscmp.cc

koscmp_CXXFLAGS = -I$(srcdir)/../lib

koscmp_LDFLAGS = $(builddir)/../lib/libkosinski.la

kosplus_SOURCES = kosplus.cc

kosplus_CXXFLAGS = -I$(srcdir)/../lib

kosplus_LDFLAGS = $(builddir)/../lib/libkosplus.la

rockcmp_SOURCES = rockcmp.cc

rockcmp_CXXFLAGS = -I$(srcdir)/../lib

rockcmp_LDFLAGS = $(builddir)/../lib/librocket.la

saxcmp_SOURCES = saxcmp.cc

saxcmp_CXXFLAGS = -I$(srcdir)/../lib

saxcmp_LDFLAGS = $(builddir)/../lib/libsaxman.la

AM_CXXFLAGS =

