bin_PROGRAMS = \
	compcmp \
	enicmp \
	koscmp \
	kosplus \
	nemcmp \
	rockcmp \
	saxcmp \
	snkcmp

compcmp_SOURCES = compcmp.cc
compcmp_LDFLAGS = $(builddir)/../lib/libcomper.la

enicmp_SOURCES = enicmp.cc
enicmp_LDFLAGS = $(builddir)/../lib/libenigma.la

nemcmp_SOURCES = nemcmp.cc
nemcmp_LDFLAGS = $(builddir)/../lib/libnemesis.la

koscmp_SOURCES = koscmp.cc
koscmp_LDFLAGS = $(builddir)/../lib/libkosinski.la

kosplus_SOURCES = kosplus.cc
kosplus_LDFLAGS = $(builddir)/../lib/libkosplus.la

rockcmp_SOURCES = rockcmp.cc
rockcmp_LDFLAGS = $(builddir)/../lib/librocket.la

saxcmp_SOURCES = saxcmp.cc
saxcmp_LDFLAGS = $(builddir)/../lib/libsaxman.la

snkcmp_SOURCES = snkcmp.cc
snkcmp_LDFLAGS = $(builddir)/../lib/libsnkrle.la

AM_CPPFLAGS = -I$(srcdir)/../../include

